[WFLY-4172] Enable the -secmgr parameter for tests if the security.manager property is defined.